# DjangoAdvancedProjectITIDO

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  Readme.md  docker-compose.yml  init-db.sh  pyproject.toml  requirements.txt
app/app/: celery.py  settings.py  urls.py
app/portal/: download_csv.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/portal/csv_files/: data.csv
app/portal/management/commands/: downloadcsv.py  importcsv.py
app/portal/migrations/: 0001_initial.py  0002_alter_csvdata_table.py  0003_remove_csvdata_base_remove_csvdata_bgn_per_mwh_and_more.py  0004_alter_csvdata_date.py  0005_remove_csvdata_price_bgn_mwh_and_more.py  0006_blockproduct_hourproducts_pricesandquantities_and_more.py
app/portal/templates/: render_csv.html
