[tool.poetry]
name = "djangoadvancedprojectitido"
version = "0.1.0"
description = "Solar Panel Electricity Price Downloader App"
authors = ["Ivaylo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.3"
celery = "^5.3.1"
django-crontab = "^0.7.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.6"
selenium = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
